<resources>
    <string name="app_name" translatable="false">Task Master</string>
    <string name="welcome_activity_title_string" translatable="true">Task Master</string>
    <string name="welcome_activity_log_in_button_string" translatable="true">Log In</string>
    <string name="welcome_activity_sign_up_button_string" translatable="true">Sign Up</string>
    <string name="sign_up_activity_title" translatable="true">Sign Up</string>
    <string name="sign_up_activity_first_name_hint_string" translatable="true">First Name</string>
    <string name="sign_up_activity_last_name_hint_string" translatable="true">Last Name</string>
    <string name="sign_up_activity_email_address_hint_string" translatable="true">Email Address</string>
    <string name="sign_up_activity_password_hint_string" translatable="true">Password</string>
    <string name="sign_up_activity_create_account_button_string" translatable="true">Create Account</string>
    <string name="error_sign_up_activity_first_name_string" translatable="true">Please enter first name</string>
    <string name="error_sign_up_activity_last_name_string" translatable="true">Please enter last name</string>
    <string name="error_sign_up_activity_email_address_string" translatable="true">Please enter a valid email address</string>
    <string name="error_sign_up_activity_password_string" translatable="true">Please enter a password</string>
    <string name="log_in_activity_title" translatable="true">Log In</string>
    <string name="log_in_activity_email_address_hint_string" translatable="true">Email Address</string>
    <string name="log_in_activity_password_hint_string" translatable="true">Password</string>
    <string name="log_in_activity_log_in_button_string" translatable="true">Log In</string>
    <string name="log_in_activity_forgot_password_string" translatable="true">Forgot your password?</string>
    <string name="error_log_in_activity_email_address_string" translatable="true">Please enter a valid email address</string>
    <string name="error_log_in_activity_password_string" translatable="true">Please enter a password</string>
    <string name="log_in_activity_dialog_send_password_tag_string" translatable="true">forgot_password_tag</string>
    <string name="log_in_activity_dialog_send_password_title_string" translatable="true">Forgot your password</string>
    <string name="log_in_activity_dialog_send_password_email_address_hint_string" translatable="true">Email Address</string>
    <string name="log_in_activity_dialog_send_password_send_password_button_string" translatable="true">Send Password</string>
    <string name="log_in_activity_dialog_send_password_cancel_button_string" translatable="true">Cancel</string>
    <string name="error_log_in_activity_dialog_send_password_email_address_string" translatable="true">Please enter a valid email address</string>
    <string name="main_activity_title_string" translatable="true">Task Groups</string>
    <string name="main_activity_menu_item_log_out_string" translatable="true">Log out</string>
    <string name="main_activity_error_no_task_groups_string" translatable="true">No Task Groups</string>
    <string name="main_activity_error_no_network_string" translatable="true">No Network</string>
    <string name="main_activity_action_add_task_group_content_description_string" translatable="true">Add Task Group</string>
    <string name="main_activity_dialog_create_group_title_string" translatable="true">Create Group</string>
    <string name="main_activity_dialog_create_group_group_name_hint_string" translatable="true">Group Name</string>
    <string name="main_activity_dialog_create_group_create_button_string" translatable="true">Create</string>
    <string name="main_activity_dialog_create_group_cancel_button_string" translatable="true">Cancel</string>
    <string name="task_group_activity_menu_item_background_string" translatable="true">Background</string>
    <string name="task_group_activity_task_list_menu_item_move_string" translatable="true">Move list</string>
    <string name="task_group_activity_task_list_add_card_button_string" translatable="true">Add Card</string>
    <string name="task_group_activity_task_list_add_task_list_button_string" translatable="true">Add Task List</string>
    <string name="task_group_activity_action_link_red_background_content_description_string" translatable="true">Select Red Background</string>
    <string name="task_group_activity_action_link_green_background_content_description_string" translatable="true">Select Green Background</string>
    <string name="task_group_activity_action_link_blue_background_content_description_string" translatable="true">Select Blue Background</string>
    <string name="task_group_activity_task_list_menu_content_description_string" translatable="true">Task List Menu</string>
    <string name="task_group_activity_image_attachment_content_description_string" translatable="true">Image Attachment In TaskList Card</string>
    <string name="task_group_activity_detailed_description_icon_content_description_string" translatable="true">Detailed Description Icon On TaskList Card</string>
    <string name="task_group_activity_attachment_icon_content_description_string" translatable="true">Attachment Icon On TaskList Card</string>
    <string name="task_group_activity_checklist_icon_content_description_string" translatable="true">Checklist Icon On TaskList Card</string>
    <string name="task_group_activity_due_date_icon_content_description_string" translatable="true">Due Date Icon On TaskList Card</string>
    <string name="task_group_activity_dialog_choose_background_tag_string" translatable="true">choose_background_tag</string>
    <string name="task_group_activity_dialog_choose_background_title_string" translatable="true">Choose Background</string>
    <string name="task_group_activity_dialog_choose_background_ok_button_string" translatable="true">OK</string>
    <string name="task_group_activity_dialog_choose_background_cancel_button_string" translatable="true">Cancel</string>
    <string name="task_group_activity_dialog_add_card_tag_string" translatable="true">add_card_tag</string>
    <string name="task_group_activity_dialog_add_card_title_string" translatable="true">Add Card</string>
    <string name="task_group_activity_dialog_add_card_card_title_hint_string" translatable="true">Card Title</string>
    <string name="task_group_activity_dialog_add_card_detailed_description_hint_string" translatable="true">Detailed Description</string>
    <string name="task_group_activity_dialog_add_card_add_card_button_string" translatable="true">Add Card</string>
    <string name="task_group_activity_dialog_add_card_cancel_button_string" translatable="true">Cancel</string>
    <string name="task_group_activity_dialog_add_task_list_tag_string" translatable="true">add_task_list_tag</string>
    <string name="task_group_activity_dialog_add_task_list_title_string" translatable="true">Add Task List</string>
    <string name="task_group_activity_dialog_add_task_list_name_hint_string" translatable="true">Task List Name</string>
    <string name="task_group_activity_dialog_add_task_list_add_button_string" translatable="true">Add</string>
    <string name="task_group_activity_dialog_add_task_list_cancel_button_string" translatable="true">Cancel</string>
    <string name="task_group_activity_dialog_move_task_list_title_string" translatable="true">Move Task List</string>
    <string name="task_group_activity_dialog_move_task_list_move_button_string" translatable="true">Move</string>
    <string name="task_group_activity_dialog_move_task_list_cancel_button_string" translatable="true">Cancel</string>
    <string name="card_detail_activity_detailed_description_hint_string" translatable="true">Add Detailed Description</string>
    <string name="card_detail_activity_attachments_title_bar_title_string" translatable="true">Attachments</string>
    <string name="card_detail_activity_menu_due_date_string" translatable="true">Due Date</string>
    <string name="card_detail_activity_menu_checklist_string" translatable="true">Checklist</string>
    <string name="card_detail_activity_menu_attachment_string" translatable="true">Attachment</string>
    <string name="card_detail_activity_menu_checklist_default_name_string" translatable="true">Checklist</string>
    <string name="card_detail_activity_menu_checklist_add_item_string" translatable="true">Add Item&#8230;</string>
    <string name="card_detail_activity_menu_edit_commit_string" translatable="true">Commit Edit</string>
    <string name="card_detail_activity_menu_checklist_delete_string" translatable="true">Delete&#8230;</string>
    <string name="card_detail_activity_attachment_time_format_string" translatable="true">%1$s at %2$s</string>
    <string name="card_detail_activity_toolbar_location_format_string" translatable="true">%1$s in task list %2$s</string>
    <string name="card_detail_activity_edit_check_list_string" translatable="true">Edit Checklist</string>
    <string name="card_detail_activity_add_check_list_item_string" translatable="true">Add Item&#8230;</string>
    <string name="card_detail_activity_new_check_list_item_string" translatable="true">New Checklist Item</string>
    <string name="card_detail_activity_edit_check_list_item_string" translatable="true">Edit Checklist Item</string>
    <string name="card_detail_activity_edit_description_title_string" translatable="true">Edit Description</string>
    <string name="card_detail_activity_edit_toolbar_title_string" translatable="true">Edit Title</string>
    <string name="card_detail_activity_default_checklist_name_string" translatable="true">Checklist</string>
    <string name="card_detail_activity_not_due_time_format_string" translatable="true">Due %1$s at %2$s</string>
    <string name="card_detail_activity_past_due_time_format_string" translatable="true">Was due %1$s at %2$s</string>
    <string name="card_detail_activity_menu_attachment_link_delete_string" translatable="true">Delete</string>
    <string name="card_detail_activity_menu_attachment_image_add_to_toolbar_string" translatable="true">Add to toolbar</string>
    <string name="card_detail_activity_menu_attachment_image_remove_from_toolbar_string" translatable="true">Remove from toolbar</string>
    <string name="card_detail_activity_menu_attachment_image_delete_string" translatable="true">Delete</string>
    <string name="card_detail_activity_toolbar_image_attachment_content_description_string" translatable="true">Attachment In Toolbar</string>
    <string name="card_detail_activity_due_date_icon_content_description_string" translatable="true">Due Date Icon</string>
    <string name="card_detail_activity_attachment_icon_content_description_string" translatable="true">Attachment Icon</string>
    <string name="card_detail_activity_attachment_menu_content_description_string" translatable="true">Attachment Menu</string>
    <string name="card_detail_activity_attachment_image_content_description_string" translatable="true">Attachment Image</string>
    <string name="card_detail_activity_action_image_attachment_icon_content_description_string" translatable="true">Select Image Attachment</string>
    <string name="card_detail_activity_action_link_attachment_icon_content_description_string" translatable="true">Select Text Link Attachment</string>
    <string name="card_detail_activity_dialog_attach_type_chooser_file_type_string" translatable="true">File</string>
    <string name="card_detail_activity_dialog_attach_type_chooser_link_type_string" translatable="true">Attach a link</string>
    <string name="widget_title_string" translatable="true">Task Due Dates</string>
    <string name="widget_empty_database_error_string" translatable="true">No due dates</string>
    <string name="widget_log_in_button_string" translatable="true">Log In</string>
</resources>