<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view_dialog_choose_background_red"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/solid_red_square"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view_dialog_choose_background_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_dialog_choose_background_red_selected"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_baseline_done_24px"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view_dialog_choose_background_green"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/task_group_activity_action_link_red_background_content_description_string"/>

        <View
            android:id="@+id/view_dialog_choose_background_green"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/solid_green_square"
            app:layout_constraintBottom_toBottomOf="@id/view_dialog_choose_background_red"
            app:layout_constraintEnd_toStartOf="@id/view_dialog_choose_background_indigo"
            app:layout_constraintStart_toEndOf="@id/view_dialog_choose_background_red"
            app:layout_constraintTop_toTopOf="@id/view_dialog_choose_background_red"/>

        <ImageView
            android:id="@+id/iv_dialog_choose_background_green_selected"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_done_24px"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/view_dialog_choose_background_red"
            app:layout_constraintEnd_toStartOf="@id/view_dialog_choose_background_indigo"
            app:layout_constraintStart_toEndOf="@id/view_dialog_choose_background_red"
            app:layout_constraintTop_toTopOf="@id/view_dialog_choose_background_red"
            android:contentDescription="@string/task_group_activity_action_link_green_background_content_description_string"/>

        <View
            android:id="@+id/view_dialog_choose_background_indigo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/solid_indigo_square"
            app:layout_constraintBottom_toBottomOf="@id/view_dialog_choose_background_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_dialog_choose_background_green"
            app:layout_constraintTop_toTopOf="@id/view_dialog_choose_background_green"/>

        <ImageView
            android:id="@+id/iv_dialog_choose_background_indigo_selected"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_done_24px"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/view_dialog_choose_background_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toEndOf="@id/view_dialog_choose_background_green"
            app:layout_constraintTop_toTopOf="@id/view_dialog_choose_background_green"
            android:contentDescription="@string/task_group_activity_action_link_blue_background_content_description_string"/>

    </android.support.constraint.ConstraintLayout>
</layout>